unpackaged/main/default/objects/Case/fields/Dual_Sourcing__c.field-meta.xml
<CustomField>
    <fullName>Dual_Sourcing__c</fullName>
    <label>Dual Sourcing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>