unpackaged/main/default/objects/Case/fields/Email_Pending_SLA__c.field-meta.xml
<CustomField>
    <fullName>Email_Pending_SLA__c</fullName>
    <label>Email Pending SLA</label>
    <length>18</length>
    <type>Text</type>
</CustomField>