unpackaged/main/default/objects/Case/fields/EmailDomainonIncomingEmail__c.field-meta.xml
<CustomField>
    <fullName>EmailDomainonIncomingEmail__c</fullName>
    <description>Get the Domain part from Web Email Field.  - Admin Only Field.</description>
    <formula>SUBSTITUTE(SuppliedEmail, LEFT(SuppliedEmail, FIND("@",SuppliedEmail)), NULL)</formula>
    <inlineHelpText>Get the Domain part from Web Email Field.  - Admin Only Field.</inlineHelpText>
    <label>Email Domain on Incoming Email</label>
    <type>Text</type>
</CustomField>