unpackaged/main/default/objects/Case/fields/Engineering_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Review_Completed__c</fullName>
    <label>Engineering Review Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Completed</fullName>
            </value>
            <value>
                <fullName>Feedback Provided</fullName>
            </value>
            <value>
                <fullName>Needs Additional Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>