unpackaged/main/default/objects/Case/fields/EntitlementMilestone_1_Violation__c.field-meta.xml
<CustomField>
    <fullName>EntitlementMilestone_1_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[Entitlement]Milestone 1 Violation</label>
    <type>Checkbox</type>
</CustomField>