unpackaged/main/default/objects/Case/fields/ERPPartStatus__c.field-meta.xml
<CustomField>
    <fullName>ERPPartStatus__c</fullName>
    <label>ERP Part Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>