unpackaged/main/default/objects/Case/fields/Escalated_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Escalated_by_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requested by Jeff Klein, used to report on how many cases have been escalated by the sales team.</description>
    <label>Escalated by Sales</label>
    <type>Checkbox</type>
</CustomField>