unpackaged/main/default/objects/Case/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <formula>IF(EscalationCommunication__c, 'Communication : ', '') +
IF(EscalationEthics__c ,'Ethics : ', '') +
IF(EscalationQuality__c ,'Quality : ', '') +
IF(EscalationSCAR__c,'SCAR : ', '') +
IF(EscalationShipping__c,'Shipping : ', '') +
IF(EscalationTimeliness__c,'Timeliness : ', '') +
IF(EscalationVQCMiss__c, 'VQC Miss : ', '') +
IF(EscalationOther__c,'Other','')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation:</label>
    <type>Text</type>
</CustomField>