unpackaged/main/default/objects/Case/fields/EscalationCommunication__c.field-meta.xml
<CustomField>
    <fullName>EscalationCommunication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation: Communication</label>
    <type>Checkbox</type>
</CustomField>