unpackaged/main/default/objects/Case/fields/EscalationEthics__c.field-meta.xml
<CustomField>
    <fullName>EscalationEthics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation: Ethics</label>
    <type>Checkbox</type>
</CustomField>