unpackaged/main/default/objects/Case/fields/EscalationOther__c.field-meta.xml
<CustomField>
    <fullName>EscalationOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation: Other</label>
    <type>Checkbox</type>
</CustomField>