unpackaged/main/default/objects/Case/fields/EscalationQuality__c.field-meta.xml
<CustomField>
    <fullName>EscalationQuality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation: Quality</label>
    <type>Checkbox</type>
</CustomField>