unpackaged/main/default/objects/Case/fields/EscalationSCAR__c.field-meta.xml
<CustomField>
    <fullName>EscalationSCAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation: SCAR</label>
    <type>Checkbox</type>
</CustomField>