unpackaged/main/default/objects/Case/fields/EscalationShipping__c.field-meta.xml
<CustomField>
    <fullName>EscalationShipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation: Shipping</label>
    <type>Checkbox</type>
</CustomField>