unpackaged/main/default/objects/Case/fields/EscalationTimeliness__c.field-meta.xml
<CustomField>
    <fullName>EscalationTimeliness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation: Timeliness</label>
    <type>Checkbox</type>
</CustomField>