unpackaged/main/default/objects/Case/fields/EscalationType__c.field-meta.xml
<CustomField>
    <fullName>EscalationType__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>