unpackaged/main/default/objects/Case/fields/EscalationVQCMiss__c.field-meta.xml
<CustomField>
    <fullName>EscalationVQCMiss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation: VQC Miss</label>
    <type>Checkbox</type>
</CustomField>