unpackaged/main/default/objects/Case/fields/EUD_Email_Count__c.field-meta.xml
<CustomField>
    <fullName>EUD_Email_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many times an EUD email has been tried to be sent</description>
    <label>[EUD] Email Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>