unpackaged/main/default/objects/Case/fields/EUD_HTSCode__c.field-meta.xml
<CustomField>
    <fullName>EUD_HTSCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[EUD] HTS Code</label>
    <type>Checkbox</type>
</CustomField>