unpackaged/main/default/objects/Case/fields/EUD_ImportReason__c.field-meta.xml
<CustomField>
    <fullName>EUD_ImportReason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[EUD] Import Reason</label>
    <type>Checkbox</type>
</CustomField>