unpackaged/main/default/objects/Case/fields/EUD_LineItemBreakdown__c.field-meta.xml
<CustomField>
    <fullName>EUD_LineItemBreakdown__c</fullName>
    <label>[EUD] Missing Data Per Line Item</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>