unpackaged/main/default/objects/Case/fields/EUD_MissingEndUseData__c.field-meta.xml
<CustomField>
    <fullName>EUD_MissingEndUseData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[EUD] Missing EUD</label>
    <type>Checkbox</type>
</CustomField>