unpackaged/main/default/objects/Case/fields/EUD_OnlyHTSMissing__c.field-meta.xml
<CustomField>
    <fullName>EUD_OnlyHTSMissing__c</fullName>
    <formula>AND(!EUD_HTSCode__c ,  EUD_Industry__c , EUD_ImportReason__c , EUD_PartDescription__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[EUD] Only HTS Missing?</label>
    <type>Checkbox</type>
</CustomField>