unpackaged/main/default/objects/Case/fields/EUD_OriginCountry__c.field-meta.xml
<CustomField>
    <fullName>EUD_OriginCountry__c</fullName>
    <label>[EUD] Origin Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>