unpackaged/main/default/objects/Case/fields/EUD_PartDescription__c.field-meta.xml
<CustomField>
    <fullName>EUD_PartDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[EUD] Part Description</label>
    <type>Checkbox</type>
</CustomField>