unpackaged/main/default/objects/Case/fields/EUD_ProductionType__c.field-meta.xml
<CustomField>
    <fullName>EUD_ProductionType__c</fullName>
    <label>Ordered Part Production Type(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>