unpackaged/main/default/objects/Case/fields/EUD_ReadyToShip__c.field-meta.xml
<CustomField>
    <fullName>EUD_ReadyToShip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[EUD] Ready to Ship?</label>
    <type>Checkbox</type>
</CustomField>