unpackaged/main/default/objects/Case/fields/EUD_Work_Stage__c.field-meta.xml
<CustomField>
    <fullName>EUD_Work_Stage__c</fullName>
    <label>[EUD] Work Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Reach Out Yet</fullName>
                <default>true</default>
                <label>No Reach Out Yet</label>
            </value>
            <value>
                <fullName>1st Attempt Sent</fullName>
            </value>
            <value>
                <fullName>2nd Attempt Sent - WARNING SENT</fullName>
            </value>
            <value>
                <fullName>VI Required</fullName>
            </value>
            <value>
                <fullName>End Use Received</fullName>
            </value>
            <value>
                <fullName>Escalated To Sales</fullName>
            </value>
            <value>
                <fullName>Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Sent to FedEx</fullName>
            </value>
            <value>
                <fullName>Shipped without Full End Use</fullName>
            </value>
            <value>
                <fullName>US Partner or Zetwork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>