unpackaged/main/default/objects/Case/fields/ExpiredJobID__c.field-meta.xml
<CustomField>
    <fullName>ExpiredJobID__c</fullName>
    <label>Expired Job ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>