unpackaged/main/default/objects/Case/fields/ExpiredJobsList__c.field-meta.xml
<CustomField>
    <fullName>ExpiredJobsList__c</fullName>
    <label>Expired Jobs List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>