unpackaged/main/default/objects/Case/fields/file_count__c.field-meta.xml
<CustomField>
    <fullName>file_count__c</fullName>
    <description>Number of files attached to case (originally devised for bulk upload.)</description>
    <label>file_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>