unpackaged/main/default/objects/Case/fields/First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time__c</fullName>
    <description>Created During PSE Service Migration Project</description>
    <inlineHelpText>The day and time of the first email message sent to the customer from the case. This is populated from a process builder on Email Message called "Email Messages Processes".</inlineHelpText>
    <label>First Response Time</label>
    <type>DateTime</type>
</CustomField>