unpackaged/main/default/objects/Case/fields/First_Time_Right__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Right__c</fullName>
    <label>First Time Right</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>