unpackaged/main/default/objects/Case/fields/First_Time_Solved_Sourcing__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Solved_Sourcing__c</fullName>
    <label>First Time Solved (Sourcing)</label>
    <type>DateTime</type>
</CustomField>