unpackaged/main/default/objects/Case/fields/FirstTimeReportedPSEOutcome__c.field-meta.xml
<CustomField>
    <fullName>FirstTimeReportedPSEOutcome__c</fullName>
    <description>Used in Flow and Report</description>
    <label>First Time Reported PSE Outcome</label>
    <type>DateTime</type>
</CustomField>