unpackaged/main/default/objects/Case/fields/ForIMUseOnlyActiveInactive__c.field-meta.xml
<CustomField>
    <fullName>ForIMUseOnlyActiveInactive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>For IM Team Use Only.  Not for Reporting but List View for easy filtering.</description>
    <inlineHelpText>For IM Team Use Only.  Not for Reporting but List View for easy filtering.</inlineHelpText>
    <label>[For IM Use Only] Active/Inactive</label>
    <type>Checkbox</type>
</CustomField>