unpackaged/main/default/objects/Case/fields/Generic__c.field-meta.xml
<CustomField>
    <fullName>Generic__c</fullName>
    <formula>Account.Generic_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generic</label>
    <type>Checkbox</type>
</CustomField>