unpackaged/main/default/objects/Case/fields/Get_Quote_Url__c.field-meta.xml
<CustomField>
    <fullName>Get_Quote_Url__c</fullName>
    <formula>Opportunity__r.Get_Quote_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Quote Url</label>
    <type>Text</type>
</CustomField>