unpackaged/main/default/objects/Case/fields/GNO_CaseExceptionFlag__c.field-meta.xml
<CustomField>
    <fullName>GNO_CaseExceptionFlag__c</fullName>
    <formula>IF(OR(
	AND(ISBLANK(RecoveryTimeStamp__c), 
				FLOOR( MOD( (now() -  CreatedDate) * 24, 24 ) ) &gt;2		),
	AND(Age_hrs__c &gt;72, NOT(ISPICKVAL(Status,'Closed')))
	),true,false)</formula>
    <inlineHelpText>Exception Flag for Case that 1st Response Time &gt; 2 Hrs.</inlineHelpText>
    <label>Case Exception Flag</label>
    <type>Checkbox</type>
</CustomField>