unpackaged/main/default/objects/Case/fields/GNO_CaseLink__c.field-meta.xml
<CustomField>
    <fullName>GNO_CaseLink__c</fullName>
    <formula>HYPERLINK("xometry5836.lightning.force.com/lightning/r/Case/" +  CASESAFEID(Id) + "/view",'Case Record Details')</formula>
    <label>Case Link</label>
    <type>Text</type>
</CustomField>