unpackaged/main/default/objects/Case/fields/GNO_HasUnreadEmail__c.field-meta.xml
<CustomField>
    <fullName>GNO_HasUnreadEmail__c</fullName>
    <description>Indicator in List View if there's inbound email that unread</description>
    <formula>IF(ISPICKVAL(Status,'Response Received'),true,false)</formula>
    <inlineHelpText>Indicator if there's unread email.</inlineHelpText>
    <label>Unread Email?</label>
    <type>Checkbox</type>
</CustomField>