unpackaged/main/default/objects/Case/fields/GNO_IsITAR__c.field-meta.xml
<CustomField>
    <fullName>GNO_IsITAR__c</fullName>
    <description>ITAR Flag On Case</description>
    <formula>Job__r.ITAR__c</formula>
    <inlineHelpText>Formula Field to show if a Case is ITAR or not.</inlineHelpText>
    <label>ITAR?</label>
    <type>Checkbox</type>
</CustomField>