unpackaged/main/default/objects/Case/fields/GNO_IsPrimaryCase__c.field-meta.xml
<CustomField>
    <fullName>GNO_IsPrimaryCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show this Flag in the list view to indicate the Primary case for communications.</description>
    <inlineHelpText>Mark one of the cases under the same Ops Id as Primary. All email communications start from this case.</inlineHelpText>
    <label>Is Primary Case</label>
    <type>Checkbox</type>
</CustomField>