unpackaged/main/default/objects/Case/fields/GNO_MadeinChina__c.field-meta.xml
<CustomField>
    <fullName>GNO_MadeinChina__c</fullName>
    <description>Made in China Flag on Ops Order</description>
    <formula>GNOOrder__r.MadeInChina__c</formula>
    <label>Made in China?</label>
    <type>Checkbox</type>
</CustomField>