unpackaged/main/default/objects/Case/fields/GNO_OrderedPartsURL__c.field-meta.xml
<CustomField>
    <fullName>GNO_OrderedPartsURL__c</fullName>
    <description>Ordered Parts</description>
    <formula>HYPERLINK('https://erp.xometry.com/parts?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=5&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D='+ OrderID__c + '&amp;n_columns=24', 'Ordered Parts')</formula>
    <label>Ordered Parts</label>
    <type>Text</type>
</CustomField>