unpackaged/main/default/objects/Case/fields/GNO_OriginalOrderDueDate__c.field-meta.xml
<CustomField>
    <fullName>GNO_OriginalOrderDueDate__c</fullName>
    <description>Original Order Due Date on Ops Order</description>
    <formula>GNOOrder__r.OriginalDueDate__c</formula>
    <label>Original Order Due Date</label>
    <type>Date</type>
</CustomField>