unpackaged/main/default/objects/Case/fields/GNO_OutsourcedJobsURL__c.field-meta.xml
<CustomField>
    <fullName>GNO_OutsourcedJobsURL__c</fullName>
    <description>GNO Used Outsourced Job URL</description>
    <formula>HYPERLINK('https://erp.xometry.com/outsourced-jobs?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=1&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D='+ OrderID__c +'&amp;n_columns=13', 'Outsourced Jobs')</formula>
    <label>Outsourced Jobs</label>
    <type>Text</type>
</CustomField>