unpackaged/main/default/objects/Case/fields/GNO_PanelUseOrderPartID__c.field-meta.xml
<CustomField>
    <fullName>GNO_PanelUseOrderPartID__c</fullName>
    <description>Show both Order ID and Part ID in the Highlight Panel</description>
    <formula>'Order ID: '+OrderID__c +', '+'Part ID: '+PartID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order ID and Job ID for quick reference.</inlineHelpText>
    <label>Order-Part ID</label>
    <type>Text</type>
</CustomField>