unpackaged/main/default/objects/Case/fields/GNO_PODOpsOrder__c.field-meta.xml
<CustomField>
    <fullName>GNO_PODOpsOrder__c</fullName>
    <description>POD on Ops Order</description>
    <formula>BLANKVALUE( TEXT(GNOOrder__r.POD__c)   ,    
											IF(
																OR( CONTAINS(GNOOrder__r.ManufacturingProcess__c, "Casting") , CONTAINS(GNOOrder__r.ManufacturingProcess__c, "Injection Molding")), "Impodsters", "First Impressions"))</formula>
    <label>POD On Ops Order</label>
    <type>Text</type>
</CustomField>