unpackaged/main/default/objects/Case/fields/GNO_PRStarted__c.field-meta.xml
<CustomField>
    <fullName>GNO_PRStarted__c</fullName>
    <description>Recovery Plan Started Indicator.</description>
    <formula>IF( NOT(ISBLANK( RecoveryTimeStamp__c )) , true, false)</formula>
    <label>P.R. Started</label>
    <type>Checkbox</type>
</CustomField>