unpackaged/main/default/objects/Case/fields/GNO_QuotesandOrdersURL__c.field-meta.xml
<CustomField>
    <fullName>GNO_QuotesandOrdersURL__c</fullName>
    <description>Quotes and Orders link used by GNO Sourcing Team.</description>
    <formula>HYPERLINK('https://erp.xometry.com/quotes-orders?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=3&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D=' + OrderID__c  +'&amp;n_columns=' + $Label.Orders_Datatable_Column_Length, 'ERP Order URL')</formula>
    <label>Quotes and Orders</label>
    <type>Text</type>
</CustomField>