unpackaged/main/default/objects/Case/fields/GNO_SourcingHistory__c.field-meta.xml
<CustomField>
    <fullName>GNO_SourcingHistory__c</fullName>
    <description>Complete Job Board History - This is used in Record Detail Page, not in the List View.</description>
    <label>Sourcing History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>