unpackaged/main/default/objects/Case/fields/GNO_SourcingHistoryLV__c.field-meta.xml
<CustomField>
    <fullName>GNO_SourcingHistoryLV__c</fullName>
    <description>Text Field to show in the List view for Job Board History.  There's this 255 char limit. 
Used in List View.</description>
    <inlineHelpText>Used in List View.</inlineHelpText>
    <label>Sourcing History (List View)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>