unpackaged/main/default/objects/Case/fields/GNO_SourcingStage__c.field-meta.xml
<CustomField>
    <fullName>GNO_SourcingStage__c</fullName>
    <defaultValue>'New'</defaultValue>
    <label>Sourcing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New 💠</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <label>On Hold 🟫</label>
            </value>
            <value>
                <fullName>RFQ</fullName>
                <label>RFQ 🟦</label>
            </value>
            <value>
                <fullName>Escalated</fullName>
                <label>Escalated 🟥</label>
            </value>
            <value>
                <fullName>DFM Review</fullName>
                <label>DFM Review ⬜</label>
            </value>
            <value>
                <fullName>Lead Time Review</fullName>
                <label>Lead Time Review ⬜</label>
            </value>
            <value>
                <fullName>Price Review</fullName>
                <label>Price Review 🟧</label>
            </value>
            <value>
                <fullName>Offered</fullName>
                <label>Offered 🟩</label>
            </value>
            <value>
                <fullName>Requote</fullName>
                <label>Requote 💠</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <label>Accepted 🟢</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejected 🔴</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Canceled ⚪</label>
            </value>
            <value>
                <fullName>Resource</fullName>
                <label>Resource 🟦</label>
            </value>
            <value>
                <fullName>Error ?</fullName>
                <label>Error ? 🟥</label>
            </value>
            <value>
                <fullName>Expired</fullName>
                <label>Expired ⚪</label>
            </value>
            <value>
                <fullName>In House</fullName>
                <label>In House 🟫</label>
            </value>
            <value>
                <fullName>Pre-sourcing</fullName>
                <label>Pre-sourcing 🟦</label>
            </value>
            <value>
                <fullName>Vendor Completed</fullName>
                <label>Vendor Completed 🟫</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>