unpackaged/main/default/objects/Case/fields/GNO_XOMActionItems__c.field-meta.xml
<CustomField>
    <fullName>GNO_XOMActionItems__c</fullName>
    <description>Complete Actions</description>
    <label>XOM Action Items</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>