unpackaged/main/default/objects/Case/fields/GNO_XOMActionItemsLV__c.field-meta.xml
<CustomField>
    <fullName>GNO_XOMActionItemsLV__c</fullName>
    <description>This is the field to show in the List View</description>
    <inlineHelpText>List View Use.</inlineHelpText>
    <label>XOM Action Items (List View)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>