unpackaged/main/default/objects/Case/fields/GNOOrder__c.field-meta.xml
<CustomField>
    <fullName>GNOOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>