unpackaged/main/default/objects/Case/fields/HardwareQuantity__c.field-meta.xml
<CustomField>
    <fullName>HardwareQuantity__c</fullName>
    <label>Hardware Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>