unpackaged/main/default/objects/Case/fields/ImpactedJobs__c.field-meta.xml
<CustomField>
    <fullName>ImpactedJobs__c</fullName>
    <label>Impacted Job(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>