unpackaged/main/default/objects/Case/fields/Initial_Queue_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Queue_Assignment__c</fullName>
    <label>Initial Queue Assignment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>