unpackaged/main/default/objects/Case/fields/InitialMiss__c.field-meta.xml
<CustomField>
    <fullName>InitialMiss__c</fullName>
    <label>Initial Miss?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFM</fullName>
            </value>
            <value>
                <fullName>GNO</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Auto Quote</fullName>
            </value>
            <value>
                <fullName>Manual Quote</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Re-Source</fullName>
            </value>
            <value>
                <fullName>Robo Sourced</fullName>
            </value>
            <value>
                <fullName>SUPPORT-2531 - Expired After Acceptance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>