unpackaged/main/default/objects/Case/fields/InspectionRequirement__c.field-meta.xml
<CustomField>
    <fullName>InspectionRequirement__c</fullName>
    <label>Inspection Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>std</fullName>
            </value>
            <value>
                <fullName>std+r</fullName>
            </value>
            <value>
                <fullName>custom</fullName>
            </value>
            <value>
                <fullName>fai</fullName>
            </value>
            <value>
                <fullName>cmm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>