unpackaged/main/default/objects/Case/fields/InstantQuoteFlag__c.field-meta.xml
<CustomField>
    <fullName>InstantQuoteFlag__c</fullName>
    <description>Boolean determines which Email Template to send.</description>
    <formula>IF(Manufacturing_Process__c='Injection Molding: Injection Molding Tool: '||Manufacturing_Process__c='Injection Molding Tool: '||Manufacturing_Process__c='Extrusion: '||Manufacturing_Process__c='Injection Molding: '||Manufacturing_Process__c='Urethane Casting: ', false, true)</formula>
    <label>InstantQuote?</label>
    <type>Checkbox</type>
</CustomField>