unpackaged/main/default/objects/Case/fields/IntercomCaseRoutingQueues__c.field-meta.xml
<CustomField>
    <fullName>IntercomCaseRoutingQueues__c</fullName>
    <description>Picklist for Intercom Case Routing</description>
    <inlineHelpText>Picklist for Intercom Case Routing</inlineHelpText>
    <label>Intercom Case Routing Queues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Management</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>