unpackaged/main/default/objects/Case/fields/Is_Stalled_PO__c.field-meta.xml
<CustomField>
    <fullName>Is_Stalled_PO__c</fullName>
    <formula>IF((ISPICKVAL(Stalled_PO__c,"")),False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Stalled PO</label>
    <type>Checkbox</type>
</CustomField>