unpackaged/main/default/objects/Case/fields/IsClosedByAutoClose__c.field-meta.xml
<CustomField>
    <fullName>IsClosedByAutoClose__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Case Auto Closed by Case Trigger?</description>
    <label>IsClosedByAutoClose</label>
    <type>Checkbox</type>
</CustomField>