unpackaged/main/default/objects/Case/fields/IsCreatedbySpamEmail__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedbySpamEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark a case if it is created by a spam email.</description>
    <inlineHelpText>This field is controlled by automation.</inlineHelpText>
    <label>Is Created by Spam Email</label>
    <type>Checkbox</type>
</CustomField>