unpackaged/main/default/objects/Case/fields/IsFlow__c.field-meta.xml
<CustomField>
    <fullName>IsFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean to Trigger Validation Rule in Flow</description>
    <label>IsFlow</label>
    <type>Checkbox</type>
</CustomField>