unpackaged/main/default/objects/Case/fields/IsOpenOnWeekend__c.field-meta.xml
<CustomField>
    <fullName>IsOpenOnWeekend__c</fullName>
    <description>If Case Opened on Sat or Sun.</description>
    <formula>IF(WEEKDAY(DATEVALUE(CreatedDate))=1,true, IF(WEEKDAY(DATEVALUE(CreatedDate))=7,true, false))</formula>
    <inlineHelpText>If Case Opened on Sat or Sun.</inlineHelpText>
    <label>Is Opened On Weekend</label>
    <type>Checkbox</type>
</CustomField>