unpackaged/main/default/objects/Case/fields/IsPartnerSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsPartnerSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the Case is coming from a Supplier or Partner.</description>
    <inlineHelpText>Check if the Case is coming from a Supplier or Partner. - Admin Only Field.</inlineHelpText>
    <label>Is Partner/Supplier</label>
    <type>Checkbox</type>
</CustomField>